--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -2,12 +2,15 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: backend-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - host: bdkit.nju.edu.cn
+    - host: ics.nju.edu.cn
       http:
         paths:
-          - path: /bdkit
+          - path: /bdkit/(.*)
             backend:
               serviceName: backend-service
-              servicePort: 80
+              servicePort: 8081
